refactor : 포인트 사용 이력 조회 테스트 코드 내 toList()로 변환